// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for Yonoma's sendEvent destination action: all fields 1`] = `
Object {
  "event": "CIoJPe",
  "listId": "CIoJPe",
  "properties": Object {
    "testType": "CIoJPe",
  },
  "timestamp": "2063-02-13T04:28:33.062Z",
  "userId": "CIoJPe",
}
`;

exports[`Testing snapshot for Yonoma's sendEvent destination action: required fields 1`] = `
Object {
  "event": "CIoJPe",
  "listId": "CIoJPe",
  "userId": "testuserid",
}
`;

exports[`Testing snapshot for Yonoma's trackPageView destination action: all fields 1`] = `
Object {
  "anonymousId": "9m$X[)9bYhG%dfuia",
  "email": "omiha@ezdu.jm",
  "listId": "9m$X[)9bYhG%dfuia",
  "properties": Object {
    "testType": "9m$X[)9bYhG%dfuia",
  },
  "referrer": "9m$X[)9bYhG%dfuia",
  "timestamp": "2108-10-06T20:40:59.959Z",
  "title": "9m$X[)9bYhG%dfuia",
  "url": "9m$X[)9bYhG%dfuia",
  "userId": "9m$X[)9bYhG%dfuia",
}
`;

exports[`Testing snapshot for Yonoma's trackPageView destination action: required fields 1`] = `
Object {
  "listId": "9m$X[)9bYhG%dfuia",
  "url": "9m$X[)9bYhG%dfuia",
  "userId": "testuserid",
}
`;
